--- a/index.html
+++ b/index.html
@@ -10,9 +10,123 @@
 </head>
 <body>
     <div id="grid-main">
-        <div class="dashboard"></div>
-        <div class="header"></div>
-        <div class="content"></div>
+
+        <div class="dashboard">
+            <div class="dashboard-grid">
+
+                <div class="dashboard-header">
+                    <img src="tbd" alt="Logo">
+                    <h1>Dashboard</h1>
+                </div>
+
+                <div class="dashboard-main">
+                    <a href="#">Home</a>
+                    <a href="#">Profile</a>
+                    <a href="#">Messages</a>
+                    <a href="#">History</a>
+                    <a href="#">Tasks</a>
+                    <a href="#">Communities</a>
+                </div>
+
+                <div class="dashboard-settings">
+                    <a href="#">Settings</a>
+                    <a href="#">Support</a>
+                    <a href="#">Privacy</a>
+                </div>
+            </div>
+        </div>
+        <div class="header">
+            <div class="header-grid">
+                
+                <div class="header-search">
+                    <input type="search" name="search" id="search" placeholder="Search">
+                </div>
+
+                <div class="header-login">
+                    <img src="tbd" alt="pic">
+                    <input type="text" name="name" id="name">
+                    <input type="text" name="handle" id="handle">
+                </div>
+
+                <div class="header-name">
+                    <img src="tbd" alt="pic">
+                    <p>Hi there,</p>
+                    <div id="user-name">
+                        <span>Name</span>(@<span class="handle">handle</span>)
+                    </div>
+                </div>
+
+                <div class="header-action">
+                    <a href="#">New</a>
+                    <a href="#">Upload</a>
+                    <a href="#">Share</a>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <h2>Your Projects</h2>
+            <div class="content-grid">
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+
+                <div class="content-tile">
+                    <h3>Project Name</h3>
+                    <p>Dummy text</p>
+                    <div class="tile-links">
+                        <a href="#">favorites icon</a>
+                        <a href="#">view icon</a>
+                        <a href="#">share icon</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="sidebar"></div>
     </div>
 </body>
