--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="header-grid">
                 
                 <div class="header-search">
-                    <input type="search" name="search" id="search" placeholder="Search">
+                    <input type="search" name="search" id="search">
                 </div>
 
                 <div class="header-login">
