--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 </div>
 
                 <div class="header-login">
-                    <img src="tbd" alt="pic">
+                    <img class="user" src="./img-fonts/raphael.png" alt="user">
                     <input type="text" name="name" id="name">
                     <input type="text" name="handle" id="handle">
                 </div>
 
                 <div class="header-name">
-                    <img src="tbd" alt="pic">
+                    <img class="user" src="./img-fonts/raphael.png" alt="user">
                     <p>Hi there,</p>
                     <div id="user-name">
                         <span>Name</span>(@<span class="handle">handle</span>)
